fix: replace text color by contrast color

--- a/packages/styles/src/components/badge.scss
+++ b/packages/styles/src/components/badge.scss
@@ -51,7 +51,7 @@ button {
 
   &-input:focus-visible + &-label {
     outline-offset: forms.$input-focus-outline-thickness;
-    outline: forms.$input-focus-outline-thickness solid var(--post-text-color);
+    outline: forms.$input-focus-outline-thickness solid var(--post-contrast-color);
   }
 
   &-input:not(:checked) + &-label:hover {
